Java 3d points beginning.

--- a/.gitignore
+++ b/.gitignore
@@ -4636,3 +4636,5 @@ SPD/alg_jacksona/venv/Scripts/vcruntime140\.dll
 SPD/alg_jacksona/venv/Scripts/winsound\.pyd
 
 SPD/\.idea/
+
+JAVA/3d_points/\.idea/
